--- a/app/src/main/res/layout-v28/fragment_viewprofile.xml
+++ b/app/src/main/res/layout-v28/fragment_viewprofile.xml
@@ -43,7 +43,7 @@
                     android:layout_marginRight="15dp"
                     android:layout_weight="40"
                     android:background="@drawable/circular_button"
-                    android:backgroundTint="@color/colorPrimary"
+                    android:backgroundTint="@color/option_background_pressed"
                     android:gravity="center"
                     android:text="Become a Fan"
                     android:textColor="@color/white"
@@ -83,7 +83,7 @@
                     android:paddingBottom="3dp"
                     android:text="ABOUT"
                     android:textStyle="bold"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/option_background_pressed"
                     android:textSize="18sp" />
 
                 <TextView
@@ -175,7 +175,7 @@
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal|bottom"
                                 android:text="0"
-                                android:textColor="@color/colorPrimary"
+                                android:textColor="@color/option_background_pressed"
                                 android:textSize="20sp" />
 
                             <TextView
@@ -210,7 +210,7 @@
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal|bottom"
                                 android:text="0"
-                                android:textColor="@color/colorPrimary"
+                                android:textColor="@color/option_background_pressed"
                                 android:textSize="20sp" />
 
                             <TextView
@@ -250,7 +250,7 @@
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal|bottom"
                                 android:text="0"
-                                android:textColor="@color/colorPrimary"
+                                android:textColor="@color/option_background_pressed"
                                 android:textSize="20sp" />
 
                             <TextView
@@ -285,7 +285,7 @@
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal|bottom"
                                 android:text="0"
-                                android:textColor="@color/colorPrimary"
+                                android:textColor="@color/option_background_pressed"
                                 android:textSize="20sp" />
 
                             <TextView
@@ -325,7 +325,7 @@
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal|bottom"
                                 android:text="0"
-                                android:textColor="@color/colorPrimary"
+                                android:textColor="@color/option_background_pressed"
                                 android:textSize="20sp" />
 
                             <TextView
@@ -360,7 +360,7 @@
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal|bottom"
                                 android:text="0"
-                                android:textColor="@color/colorPrimary"
+                                android:textColor="@color/option_background_pressed"
                                 android:textSize="20sp" />
 
                             <TextView
@@ -400,7 +400,7 @@
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal|bottom"
                                 android:text="0"
-                                android:textColor="@color/colorPrimary"
+                                android:textColor="@color/option_background_pressed"
                                 android:textSize="20sp" />
 
                             <TextView
@@ -435,7 +435,7 @@
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal|bottom"
                                 android:text="0"
-                                android:textColor="@color/colorPrimary"
+                                android:textColor="@color/option_background_pressed"
                                 android:textSize="20sp" />
 
                             <TextView
@@ -575,7 +575,7 @@
                         android:layout_gravity="center"
                         android:fontFamily="@font/orion"
                         android:text="Domain"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/option_background_pressed"
                         android:textSize="30sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
