--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -136,7 +136,7 @@ android:visibility="gone"
                     android:layout_below="@+id/btn_login"
                     android:maxLines="2"
                     android:text=" Click here"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/option_background_pressed"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -173,7 +173,7 @@ android:visibility="gone"
                 android:maxLines="2"
                 android:minLines="2"
                 android:text= " Sign up here"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/option_background_pressed"
                 android:layout_toRightOf="@+id/link_signup1"
                 android:textSize="16sp"
                 android:gravity="bottom|center_horizontal"
