--- a/app/src/main/res/layout/layout_top_tabs.xml
+++ b/app/src/main/res/layout/layout_top_tabs.xml
@@ -19,7 +19,7 @@
                 android:background="@color/black"
                 app:tabTextColor="@color/white"
 
-                app:tabSelectedTextColor="@color/colorPrimary"
+                app:tabSelectedTextColor="@color/option_background_pressed"
 
                 app:tabIndicatorColor="#E3706E">
 
