--- a/app/src/main/res/drawable/bg_sender.xml
+++ b/app/src/main/res/drawable/bg_sender.xml
@@ -94,13 +94,13 @@
             android:pivotY="0%"
             android:toDegrees="0">
             <shape android:shape="rectangle">
-                <solid android:color="@color/colorPrimary" />
+                <solid android:color="@color/option_background_pressed" />
             </shape>
         </rotate>
     </item>
     <item android:right="10dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="@color/option_background_pressed" />
             <corners android:radius="4dp" />
         </shape>
     </item>
