--- a/app/src/main/res/drawable/grey_border_bottom.xml
+++ b/app/src/main/res/drawable/grey_border_bottom.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="@color/option_background_pressed" />
         </shape>
     </item>
     <item android:bottom="1dp">
