--- a/app/src/main/res/layout/activity_contest2.xml
+++ b/app/src/main/res/layout/activity_contest2.xml
@@ -30,7 +30,7 @@
                 android:text="Create Contest Form"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/option_background_pressed"
                 android:textSize="16sp"
                 />
             <TextView
@@ -49,7 +49,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_below="@+id/h3"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/option_background_pressed"
                 android:textSize="16sp"
                 />
             <TextView
@@ -69,7 +69,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_below="@+id/h5"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/option_background_pressed"
                 android:textSize="16sp"
                 />
 
@@ -89,7 +89,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_below="@+id/h7"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/option_background_pressed"
                 android:textSize="16sp"
                 />
 
@@ -110,7 +110,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_below="@+id/h9"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/option_background_pressed"
         android:textSize="16sp"
         />
 
