--- a/app/src/main/res/layout/activity_contest_view.xml
+++ b/app/src/main/res/layout/activity_contest_view.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".home.MainActivity">
+    android:layout_height="match_parent">
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -14,21 +14,32 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:id="@+id/reLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <include layout="@layout/snippet_top_bar" />
+        </RelativeLayout>
+
         <!--top toolbar    -->
         <RelativeLayout
+            android:id="@+id/relLayout1"
+            android:layout_below="@id/reLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/relLayout1">
-            <include layout="@layout/layout_top_tabs"/>
+            android:layout_height="wrap_content">
+
+            <include layout="@layout/layout_top_tabs" />
 
         </RelativeLayout>
         <!--        middle section-->
         <RelativeLayout
+            android:id="@+id/relLayout2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/relLayout2"
-            android:layout_below="@+id/relLayout1"
-            android:layout_above="@+id/bottom">
+            android:layout_above="@+id/bottom"
+            android:layout_below="@+id/relLayout1">
 
             <include layout="@layout/layout_center_viewpager" />
         </RelativeLayout>
