--- a/app/src/main/res/layout/activity_participant_requests.xml
+++ b/app/src/main/res/layout/activity_participant_requests.xml
@@ -3,23 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/white"
     android:layout_height="match_parent"
-    tools:context=".contest.Contest_Evaluation.Participant_Request">
+    android:background="@color/white"
+    tools:context=".contest.Contest_Evaluation.ParticipantRequestActivity">
+
     <RelativeLayout
+        android:id="@+id/rqst"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/rqst">
-        <include layout="@layout/snippet_top_bar"
-        />
+        android:layout_marginBottom="10dp">
+
+        <include layout="@layout/snippet_top_bar" />
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view4"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/rqst"
-        android:id="@+id/recycler_view4">
+        android:layout_below="@+id/rqst">
 
     </androidx.recyclerview.widget.RecyclerView>
 
