--- a/app/src/main/res/layout/fragment_marks_and_votes.xml
+++ b/app/src/main/res/layout/fragment_marks_and_votes.xml
@@ -51,7 +51,7 @@
                 android:layout_below="@+id/relLayout"
                 android:layout_marginTop="30dp"
                 android:text="Voters List"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/option_background_pressed"
                 android:textSize="18sp" />
 
             <TextView
@@ -59,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Jury Marks "
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/option_background_pressed"
                 android:textSize="18sp" />
         </RelativeLayout>
     </ScrollView>
