--- a/app/src/main/res/layout/item_judge.xml
+++ b/app/src/main/res/layout/item_judge.xml
@@ -423,7 +423,7 @@
                     android:textSize="18sp"
                     android:maxLines="1"
                     android:text="Total Score"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/option_background_pressed"
                     android:layout_gravity="center"
                     android:layout_marginLeft="5dp"
                     android:id="@+id/ts"
@@ -434,7 +434,7 @@
                     android:gravity="center"
                     android:id="@+id/tsEt"
                     android:maxLines="1"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/option_background_pressed"
                     android:layout_marginRight="5dp"
                     android:padding="5dp"
                     android:background="@drawable/rectangular_border"
