--- a/app/src/main/res/layout/layout_bottom_sheet_sendupdate.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet_sendupdate.xml
@@ -18,7 +18,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/option_background_pressed"
         android:layout_marginBottom="10dp"/>
 
         <EditText
