--- a/app/src/main/res/layout/layout_contest_item2.xml
+++ b/app/src/main/res/layout/layout_contest_item2.xml
@@ -40,7 +40,7 @@
                 android:layout_margin="2dp"
                 android:gravity="center"
                 android:text="100%"
-                android:textColor="#FFC107"
+                android:textColor="@color/option_background_pressed"
                 android:textSize="13sp" />
 
         </RelativeLayout>
@@ -60,7 +60,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="title"
             android:textColor="@color/black"
             android:textSize="15sp"
             android:textStyle="bold" />
@@ -76,7 +75,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Domain: "
                 android:textColor="@color/grey"
                 android:textSize="12sp" />
 
