--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#f29492</color>
+    <color name="option_background_pressed">#f29492</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#f29492</color>
 
